Working on the selection process
